- Added: Support for 13 more currencies in ePay Standard payment module
- Added: New payment module for ePay in-shop payment processing
- Added: CSS class even/odd for product list
- Added: Watermark option for gallery and thumbnail images
- Added: Addresses are added to address book on checkout (enable in checkout module) (Ticket #24)
- Improved: Downloads can now be added to product variants (Ticket #116)
- Improved: PayPal Standard now shows products on paypal page (Ticket #146)
- Improved: Product reader now has a "back" link (Ticket #197)
- Improved: Downloads is now a tools option (Ticket #116)
- Fixed: cart_html and cart_text now include subtotal, surcharges and grand total (Ticket #34)
- Fixed: Variant price should not show "From" when all variants have the same price
- Fixed: Now using core widget TimePeriod for shipping weight which has a larger select menu.
- Fixed: Printing order PDF throwed an exception
- Fixed: Use first available product type if no default/fallback is set
- Fixed: Problem with standardize function and wrong image folder (Ticket #201)
- Fixed: Incorrect reference to bcc property of a mailing object (Ticket #206)
- Fixed: All variant attributes are now mandatory
- Fixed: Phone number not filled in PayPal Standard (Ticket #171)
- Fixed: Line breaks in teaser did not work (Ticket #198)
- Fixed: tl_iso_addressbook.email is no longer mandatory (Ticket #174)
- Fixed: Removed redirect page from address book module setting (Ticket #174)

Version 0.2.beta1 (2010-08-25)
------------------------------
- Introducing IsotopeProductCollection, abstracting a collection of products (eg. cart, order, wishlist)
- Introducing IsotopeGallery class for creating custom image galleries
- Checkout condition data is now available in order confirmation mail (Ticket #103)
- Added: Product weight field and weight units
- Added: Shipping module for price based on product weight
- Added: New payment module for ePay (www.epay.eu)