@@ -29,6 +29,8 @@
 /**
  * Fields
  */
+$GLOBALS['TL_LANG']['tl_content']['iso_reader_jumpTo']	= array('Product reader jump to page', 'This setting defines to which page a user will be redirected when clicking a product for more info.');
+$GLOBALS['TL_LANG']['tl_content']['iso_list_layout']	= array('Product list template', 'Please choose a list layout. You can add custom list layouts to folder <em>templates</em>. List template files start with <em>iso_list_</em> and require file extension <em>.tpl</em>.');
 $GLOBALS['TL_LANG']['tl_content']['iso_attribute_set'] = array('Product Attribute Set','Select a product attribute set to choose a listing filter for this page.');
 $GLOBALS['TL_LANG']['tl_content']['iso_filters'] = array('Listing Filter','Select a product listing filter');
 
